[workspace]

members = [
  "cap_1/cap1_3",
  "cap_2",
  "cap_3/cap3_1",
  "cap_3/cap3_2",
  "cap_3/cap3_3",
  "cap_3/cap3_5",
  "cap_4/cap4_1",
  "cap_4/cap4_2",
  "cap_4/cap4_3",
  "cap_5/cap5_1",
  "cap_5/cap5_2",
  "cap_5/cap5_3",
  "cap_6/cap6_1_2",
  "cap_6/cap6_3",
  "cap_7/application_structure",
  "cap_7/app",
  "cap_8",
  "cap_9"
]